# lightx-node

./: .gitignore  CMakeLists.txt  README.md
include/node/: node.h
include/utils/: utils.h
src/: CMakeLists.txt
src/camera/: CMakeLists.txt  camera_node.cpp  camera_node.h
src/image/: CMakeLists.txt
src/image/convert/: CMakeLists.txt  image_convert.cpp  image_convert.h
src/image/cvt_color/: CMakeLists.txt  cvt_color.cpp  cvt_color.h
src/image/threshold/: CMakeLists.txt  threshold_node.cpp  threshold_node.h
test/: main.cpp  testcv.cpp  testnode.cpp  utils.cpp
